fixed z-index video

--- a/src/app/containers/Ataraxia/containers/Main/main.css
+++ b/src/app/containers/Ataraxia/containers/Main/main.css
@@ -36,6 +36,9 @@
         &:hover {
             opacity: 0.7;
         }
+        @media (min-width: 769px){
+            display: none;
+        }            
     }
 }
 
